--- a/index.html
+++ b/index.html
@@ -52,37 +52,43 @@
             }
         }
 
-        /* Navigation Header */
-        .navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.85);
-            backdrop-filter: blur(10px);
-            border-bottom: 1px solid rgba(18, 159, 202, 0.2);
-            padding: 20px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            z-index: 1000;
-            transition: all 0.3s ease;
-        }
+                 /* Navigation Header */
+         .navbar {
+             position: fixed;
+             top: 0;
+             left: 0;
+             right: 0;
+             background: transparent;
+             backdrop-filter: blur(10px);
+             border-bottom: 1px solid rgba(18, 159, 202, 0.2);
+             padding: 20px 40px;
+             display: flex;
+             justify-content: space-between;
+             align-items: center;
+             z-index: 1000;
+             transition: all 0.3s ease;
+         }
 
-        .navbar.scrolled {
-            background: rgba(0, 0, 0, 0.95);
-            box-shadow: 0 2px 20px rgba(18, 159, 202, 0.1);
-        }
+         .navbar.scrolled {
+             background: rgba(0, 0, 0, 0.3);
+             backdrop-filter: blur(15px);
+             box-shadow: 0 2px 20px rgba(18, 159, 202, 0.1);
+         }
 
-        .nav-logo {
-            font-size: 24px;
-            font-weight: 700;
-            color: #129fca;
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
+         .nav-logo {
+             font-size: 24px;
+             font-weight: 700;
+             color: #129fca;
+             text-decoration: none;
+             display: flex;
+             align-items: center;
+             gap: 10px;
+         }
+
+         .nav-logo img {
+             height: 40px;
+             width: auto;
+         }
 
         .nav-links {
             display: flex;
@@ -171,17 +177,18 @@
                 padding: 15px 20px;
             }
 
-            .nav-links {
-                display: none;
-                position: absolute;
-                top: 100%;
-                left: 0;
-                right: 0;
-                background: rgba(0, 0, 0, 0.98);
-                flex-direction: column;
-                padding: 20px;
-                border-bottom: 1px solid rgba(18, 159, 202, 0.2);
-            }
+                         .nav-links {
+                 display: none;
+                 position: absolute;
+                 top: 100%;
+                 left: 0;
+                 right: 0;
+                 background: rgba(0, 0, 0, 0.7);
+                 backdrop-filter: blur(15px);
+                 flex-direction: column;
+                 padding: 20px;
+                 border-bottom: 1px solid rgba(18, 159, 202, 0.2);
+             }
 
             .nav-links.active {
                 display: flex;
@@ -417,49 +424,51 @@
             color: #FFFFFF;
         }
 
-                 /* About Section */
-         .about-section {
-             padding: 120px 40px;
-             max-width: 90%;
-             margin: 0 auto;
-             display: flex;
-             gap: 60px;
-             align-items: center;
-             flex-wrap: wrap;
-             position: relative;
-             z-index: 1;
+                                   /* About Section */
+          .about-section {
+              padding: 80px 40px;
+              max-width: 1200px;
+              margin: 0 auto;
+              display: flex;
+              gap: 50px;
+              align-items: center;
+              flex-wrap: wrap;
+              position: relative;
+              z-index: 1;
+          }
+
+         .about-image {
+             flex: 0 0 400px;
+             max-width: 100%;
+             text-align: center;
          }
 
-        .about-image {
-            flex: 1;
-            min-width: 300px;
-            text-align: center;
-        }
+         .about-image img {
+             max-width: 100%;
+             height: auto;
+             max-height: 400px;
+             object-fit: contain;
+         }
 
-        .about-image img {
-            max-width: 100%;
-            height: auto;
-        }
+         .about-content {
+             flex: 1;
+             min-width: 300px;
+         }
 
-        .about-content {
-            flex: 1;
-            min-width: 300px;
-        }
+         .about-title {
+             font-size: 42px;
+             font-weight: 700;
+             color: #FFFFFF;
+             margin-bottom: 20px;
+             line-height: 1.2;
+         }
 
-        .about-title {
-            font-size: 48px;
-            font-weight: 700;
-            color: #FFFFFF;
-            margin-bottom: 30px;
-            line-height: 1.2;
-        }
-
-        .about-text {
-            font-size: 18px;
-            color: #FFFFFF;
-            line-height: 1.8;
-            margin-bottom: 40px;
-        }
+         .about-text {
+             font-size: 17px;
+             color: #FFFFFF;
+             line-height: 1.7;
+             margin-bottom: 30px;
+         }
 
         .about-text .highlight {
             color: #129fca;
@@ -794,14 +803,24 @@
                  font-size: 40px;
              }
 
-             .about-section {
-                 flex-direction: column;
-                 padding: 80px 20px;
-             }
+                           .about-section {
+                  flex-direction: column;
+                  padding: 60px 20px;
+                  gap: 30px;
+              }
 
-             .about-title {
-                 font-size: 32px;
-             }
+              .about-image {
+                  flex: 1;
+                  max-width: 100%;
+              }
+
+              .about-title {
+                  font-size: 32px;
+              }
+
+              .about-text {
+                  font-size: 16px;
+              }
 
              .features-title {
                  font-size: 32px;
@@ -847,9 +866,11 @@
     </style>
  </head>
  <body>
-     <!-- Navigation Header -->
-     <nav class="navbar" id="navbar">
-         <a href="#home" class="nav-logo">XEQ Network</a>
+           <!-- Navigation Header -->
+      <nav class="navbar" id="navbar">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               <a href="#home" class="nav-logo">
+                    <img src="logo.svg" alt="XEQ Network Logo" />
+                </a>
          <button class="mobile-menu-toggle" id="mobileMenuToggle">☰</button>
                    <ul class="nav-links" id="navLinks">
               <li><a href="#home">Home</a></li>
