--- a/index.html
+++ b/index.html
@@ -53,21 +53,22 @@
         }
 
                  /* Navigation Header */
-         .navbar {
-             position: fixed;
-             top: 0;
-             left: 0;
-             right: 0;
-             background: transparent;
-             backdrop-filter: blur(10px);
-             border-bottom: 1px solid rgba(18, 159, 202, 0.2);
-             padding: 20px 40px;
-             display: flex;
-             justify-content: space-between;
-             align-items: center;
-             z-index: 1000;
-             transition: all 0.3s ease;
-         }
+        .navbar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: transparent;
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid rgba(18, 159, 202, 0.2);
+            padding: 20px 40px;
+            display: grid;
+            grid-template-columns: auto 1fr auto;
+            align-items: center;
+            gap: 30px;
+            z-index: 1000;
+            transition: all 0.3s ease;
+        }
 
          .navbar.scrolled {
              background: rgba(0, 0, 0, 0.3);
@@ -95,6 +96,7 @@
             gap: 30px;
             align-items: center;
             list-style: none;
+            justify-content: center;
         }
 
         .nav-links a {
