--- a/index.html
+++ b/index.html
@@ -223,17 +223,33 @@
             text-align: center;
             position: relative;
             z-index: 1;
+            overflow: hidden;
         }
 
-        /* Decentralized Node Visualization */
+        /* Decentralized Node Visualization - Background */
+        .hero-section::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 600px;
+            height: 600px;
+            opacity: 0.15;
+            z-index: 0;
+            pointer-events: none;
+        }
+
         .node-network {
-            width: 400px;
-            height: 400px;
-            margin-bottom: 40px;
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 600px;
+            height: 600px;
+            opacity: 0.12;
+            z-index: 0;
+            pointer-events: none;
         }
 
         .node-container {
@@ -244,13 +260,13 @@
 
         .node {
             position: absolute;
-            width: 60px;
-            height: 60px;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
-            background: radial-gradient(circle, #129fca, rgba(18, 159, 202, 0.3));
-            border: 2px solid #129fca;
-            box-shadow: 0 0 20px rgba(18, 159, 202, 0.6), 0 0 40px rgba(18, 159, 202, 0.3);
-            animation: pulse 2s ease-in-out infinite;
+            background: radial-gradient(circle, rgba(18, 159, 202, 0.4), rgba(18, 159, 202, 0.1));
+            border: 1px solid rgba(18, 159, 202, 0.3);
+            box-shadow: 0 0 15px rgba(18, 159, 202, 0.2);
+            animation: pulse 3s ease-in-out infinite;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -258,15 +274,15 @@
 
         .node::after {
             content: '';
-            width: 20px;
-            height: 20px;
+            width: 12px;
+            height: 12px;
             border-radius: 50%;
-            background: #129fca;
-            box-shadow: 0 0 10px #129fca;
+            background: rgba(18, 159, 202, 0.5);
+            box-shadow: 0 0 8px rgba(18, 159, 202, 0.3);
         }
 
         .node-1 {
-            top: 0;
+            top: 20px;
             left: 50%;
             transform: translateX(-50%);
             animation-delay: 0s;
@@ -274,41 +290,41 @@
 
         .node-2 {
             top: 25%;
-            left: 10%;
-            animation-delay: 0.3s;
+            left: 80px;
+            animation-delay: 0.5s;
         }
 
         .node-3 {
             top: 25%;
-            right: 10%;
-            animation-delay: 0.6s;
+            right: 80px;
+            animation-delay: 1s;
         }
 
         .node-4 {
             bottom: 25%;
-            left: 10%;
-            animation-delay: 0.9s;
+            left: 80px;
+            animation-delay: 1.5s;
         }
 
         .node-5 {
             bottom: 25%;
-            right: 10%;
-            animation-delay: 1.2s;
+            right: 80px;
+            animation-delay: 2s;
         }
 
         .node-6 {
-            bottom: 0;
+            bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
-            animation-delay: 1.5s;
+            animation-delay: 2.5s;
         }
 
         .node-center {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 80px;
-            height: 80px;
+            width: 50px;
+            height: 50px;
             animation-delay: 0s;
             z-index: 2;
         }
@@ -316,27 +332,27 @@
         .connection-line {
             position: absolute;
             height: 1px;
-            background: linear-gradient(90deg, transparent, rgba(18, 159, 202, 0.4), transparent);
-            animation: flow 3s ease-in-out infinite;
+            background: linear-gradient(90deg, transparent, rgba(18, 159, 202, 0.2), transparent);
+            animation: flow 4s ease-in-out infinite;
         }
 
         @keyframes pulse {
             0%, 100% {
                 transform: translate(-50%, -50%) scale(1);
-                opacity: 1;
+                opacity: 0.6;
             }
             50% {
-                transform: translate(-50%, -50%) scale(1.1);
-                opacity: 0.8;
+                transform: translate(-50%, -50%) scale(1.05);
+                opacity: 0.4;
             }
         }
 
         @keyframes flow {
             0%, 100% {
-                opacity: 0.3;
+                opacity: 0.15;
             }
             50% {
-                opacity: 0.8;
+                opacity: 0.3;
             }
         }
 
@@ -347,6 +363,8 @@
             margin-bottom: 30px;
             line-height: 1.1;
             letter-spacing: -1px;
+            position: relative;
+            z-index: 2;
         }
 
         .hero-subtitle {
@@ -355,6 +373,8 @@
             margin-bottom: 50px;
             max-width: 70%;
             line-height: 1.6;
+            position: relative;
+            z-index: 2;
         }
 
         .hero-buttons {
@@ -362,6 +382,8 @@
             gap: 20px;
             flex-wrap: wrap;
             justify-content: center;
+            position: relative;
+            z-index: 2;
         }
 
         .btn {
@@ -899,14 +921,14 @@
                  <div class="node node-5"></div>
                  <div class="node node-6"></div>
                  <div class="node node-center"></div>
-                 <!-- Connection lines drawn with SVG or CSS -->
-                 <svg class="connection-lines" width="400" height="400" style="position: absolute; top: 0; left: 0; pointer-events: none; z-index: 1;">
-                     <line x1="200" y1="0" x2="200" y2="200" stroke="rgba(18,159,202,0.3)" stroke-width="1"/>
-                     <line x1="40" y1="100" x2="200" y2="200" stroke="rgba(18,159,202,0.3)" stroke-width="1"/>
-                     <line x1="360" y1="100" x2="200" y2="200" stroke="rgba(18,159,202,0.3)" stroke-width="1"/>
-                     <line x1="40" y1="300" x2="200" y2="200" stroke="rgba(18,159,202,0.3)" stroke-width="1"/>
-                     <line x1="360" y1="300" x2="200" y2="200" stroke="rgba(18,159,202,0.3)" stroke-width="1"/>
-                     <line x1="200" y1="400" x2="200" y2="200" stroke="rgba(18,159,202,0.3)" stroke-width="1"/>
+                 <!-- Connection lines drawn with SVG -->
+                 <svg class="connection-lines" width="600" height="600" style="position: absolute; top: 0; left: 0; pointer-events: none; z-index: 1;">
+                     <line x1="300" y1="0" x2="300" y2="300" stroke="rgba(18,159,202,0.15)" stroke-width="1"/>
+                     <line x1="60" y1="150" x2="300" y2="300" stroke="rgba(18,159,202,0.15)" stroke-width="1"/>
+                     <line x1="540" y1="150" x2="300" y2="300" stroke="rgba(18,159,202,0.15)" stroke-width="1"/>
+                     <line x1="60" y1="450" x2="300" y2="300" stroke="rgba(18,159,202,0.15)" stroke-width="1"/>
+                     <line x1="540" y1="450" x2="300" y2="300" stroke="rgba(18,159,202,0.15)" stroke-width="1"/>
+                     <line x1="300" y1="600" x2="300" y2="300" stroke="rgba(18,159,202,0.15)" stroke-width="1"/>
                  </svg>
              </div>
          </div>
