--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         }
 
         .nav-btn {
-            padding: 10px 24px;
-            font-size: 16px;
+            padding: 8px 18px;
+            font-size: 14px;
             font-weight: 600;
             border-radius: 6px;
             text-decoration: none;
@@ -1046,8 +1046,7 @@
         <h1 class="hero-title">The World's First Privacy Developer Platform</h1>
         <p class="hero-subtitle">Build privacy-first decentralized applications on Equilibria's secure blockchain. Stake $XEQ, validate transactions, and shape the future of private crypto.</p>
         <div class="hero-buttons">
-            <a href="https://nonkyc.io/market/XEQ_BTC" class="btn btn-primary" target="_blank">Buy $XEQ</a>
-            <a href="https://equilibria-network.gitbook.io/docs/" class="btn btn-secondary" target="_blank">View Documentation</a>
+            <a href="#" class="btn btn-primary">Join The Testnet</a>
         </div>
     </section>
 
