Add Team card hover effect to Use Cases and Key Features cards

--- a/index.html
+++ b/index.html
@@ -756,6 +756,12 @@
             border: 1px solid rgba(18, 159, 202, 0.2);
             border-radius: 12px;
             text-align: center;
+            transition: all 0.3s ease;
+        }
+        
+        .feature-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 40px rgba(18, 159, 202, 0.3);
         }
 
         .feature-card img {
@@ -828,9 +834,8 @@
         }
 
         .use-case-card:hover {
-            transform: translateY(-5px);
-            border-color: rgba(18, 159, 202, 0.5);
-            box-shadow: 0 10px 30px rgba(18, 159, 202, 0.2);
+            transform: translateY(-10px);
+            box-shadow: 0 10px 40px rgba(18, 159, 202, 0.3);
         }
 
         .use-case-icon {
