--- a/index.html
+++ b/index.html
@@ -542,11 +542,18 @@
              text-align: center;
          }
 
-         .about-image img {
+         .about-icon {
              max-width: 100%;
              height: auto;
              max-height: 400px;
-             object-fit: contain;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+         }
+         
+         .about-icon svg {
+             width: 100%;
+             height: 100%;
          }
 
          .about-content {
