Center team profile photos and update team member names and titles

--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@
          
          .team-member svg {
              display: block;
+             margin: 0 auto;
          }
 
          .team-member h3 {
@@ -1424,7 +1425,7 @@
                      <line x1="40" y1="30" x2="75" y2="50" stroke="rgba(18,159,202,0.3)" stroke-width="1"/>
                      <line x1="110" y1="30" x2="75" y2="50" stroke="rgba(18,159,202,0.3)" stroke-width="1"/>
                  </svg>
-                 <h3>Wayland</h3>
+                 <h3>Spencer Shearer, Wayland</h3>
                  <div class="team-role">Chief Decentralization Officer</div>
                  <p>Leading the development of XEQ Network, a developer-focused privacy platform designed to support applications prioritizing confidentiality and security. With a strong background in strategic vision, cross-team collaboration, and ecosystem growth, I focus on enabling builders to create privacy-enhancing solutions.</p>
              </div>
@@ -1453,8 +1454,8 @@
                      <line x1="32.5" y1="102.5" x2="57" y2="110" stroke="rgba(18,159,202,0.3)" stroke-width="1"/>
                      <line x1="117.5" y1="102.5" x2="93" y2="110" stroke="rgba(18,159,202,0.3)" stroke-width="1"/>
                  </svg>
-                 <h3>Chief Solutions Architect</h3>
-                 <div class="team-role">Solutions Architect</div>
+                 <h3>Frazer Mackenzie</h3>
+                 <div class="team-role">Chief Solutions Architect</div>
                  <p>Bringing over 30 years of experience in software engineering, specializing in data intelligence, cloud infrastructure, distributed systems, security, and encryption. I focus on designing and optimizing the platform's privacy-first architecture, ensuring developers have the tools to build secure, scalable, and efficient applications.</p>
              </div>
              <div class="team-member">
