Update social section text

--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,7 @@
      <!-- Social Section -->
      <section class="social-section" id="social">
          <div class="social-header">
-             <h2 class="social-title">Follow us! Join our community for the latest updates</h2>
+             <h2 class="social-title">Follow us, join the community for the latest updates!</h2>
          </div>
          <div class="social-links">
              <a href="https://t.me/XEQCommunity" class="social-link" target="_blank" aria-label="Telegram">
