Remove Privacy-First stat and update 100k stat to show '100k' with 'XEQ/Full-Node' label

--- a/index.html
+++ b/index.html
@@ -1147,22 +1147,18 @@
              <div class="stat-number" id="launch-year">2025</div>
              <div class="stat-label">Launch Year</div>
          </div>
-         <div class="stat-item">
-             <div class="stat-number">100k XEQ</div>
-             <div class="stat-label">Full-Node Size</div>
-         </div>
-         <div class="stat-item">
-             <div class="stat-number" id="node-count">0</div>
-             <div class="stat-label">Current Nodes</div>
-         </div>
-         <div class="stat-item">
-             <div class="stat-number">POS</div>
-             <div class="stat-label">Proof-of-Stake</div>
-         </div>
-         <div class="stat-item">
-             <div class="stat-number">100%</div>
-             <div class="stat-label">Privacy-First</div>
-         </div>
+                   <div class="stat-item">
+              <div class="stat-number">100k</div>
+              <div class="stat-label">XEQ/Full-Node</div>
+          </div>
+          <div class="stat-item">
+              <div class="stat-number" id="node-count">0</div>
+              <div class="stat-label">Current Nodes</div>
+          </div>
+          <div class="stat-item">
+              <div class="stat-number">POS</div>
+              <div class="stat-label">Proof-of-Stake</div>
+          </div>
      </section>
 
          <!-- About Section -->
