Change hero section font to Poppins

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Equilibria XEQ Network - Preview</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -492,26 +492,28 @@
             }
         }
 
-        .hero-title {
-            font-size: 72px;
-            font-weight: 700;
-            color: #FFFFFF;
-            margin-bottom: 30px;
-            line-height: 1.1;
-            letter-spacing: -1px;
-            position: relative;
-            z-index: 2;
-        }
+                 .hero-title {
+             font-size: 72px;
+             font-weight: 700;
+             color: #FFFFFF;
+             margin-bottom: 30px;
+             line-height: 1.1;
+             letter-spacing: -1px;
+             position: relative;
+             z-index: 2;
+             font-family: 'Poppins', sans-serif;
+         }
 
-        .hero-subtitle {
-            font-size: 20px;
-            color: #FFFFFF;
-            margin-bottom: 50px;
-            max-width: 70%;
-            line-height: 1.6;
-            position: relative;
-            z-index: 2;
-        }
+         .hero-subtitle {
+             font-size: 20px;
+             color: #FFFFFF;
+             margin-bottom: 50px;
+             max-width: 70%;
+             line-height: 1.6;
+             position: relative;
+             z-index: 2;
+             font-family: 'Poppins', sans-serif;
+         }
 
         .hero-buttons {
             display: flex;
@@ -522,15 +524,16 @@
             z-index: 2;
         }
 
-        .btn {
-            padding: 18px 40px;
-            font-size: 18px;
-            font-weight: 600;
-            border-radius: 8px;
-            text-decoration: none;
-            transition: all 0.3s ease;
-            letter-spacing: 0.5px;
-        }
+                 .btn {
+             padding: 18px 40px;
+             font-size: 18px;
+             font-weight: 600;
+             border-radius: 8px;
+             text-decoration: none;
+             transition: all 0.3s ease;
+             letter-spacing: 0.5px;
+             font-family: 'Poppins', sans-serif;
+         }
 
         .btn-primary {
             background-color: #129fca;
