--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
             box-sizing: border-box;
         }
 
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(-45deg, #000000, #0a1a2e, #001a33, #002244, #003366, #0a1a2e);
-            background-size: 400% 400%;
-            animation: gradientShift 15s ease infinite;
-            color: #FFFFFF;
-            line-height: 1.6;
-            min-height: 100vh;
-            position: relative;
-            overflow-x: hidden;
-        }
+                 body {
+             font-family: 'Poppins', sans-serif;
+             background: linear-gradient(-45deg, #000000, #0a1a2e, #001a33, #002244, #003366, #0a1a2e);
+             background-size: 400% 400%;
+             animation: gradientShift 15s ease infinite;
+             color: #FFFFFF;
+             line-height: 1.6;
+             min-height: 100vh;
+             position: relative;
+             overflow-x: hidden;
+         }
 
         /* Animated gradient overlay for more color */
         body::before {
