Change button text from 'Join The Testnet' to 'Join Testnet'

--- a/index.html
+++ b/index.html
@@ -1139,9 +1139,9 @@
          </div>
         <h1 class="hero-title">The World's First Privacy Developer Platform</h1>
         <p class="hero-subtitle">Build privacy-first decentralized applications on Equilibria's secure blockchain. Stake $XEQ, validate transactions, and shape the future of private crypto.</p>
-        <div class="hero-buttons">
-            <a href="#" class="btn btn-primary">Join The Testnet</a>
-        </div>
+                 <div class="hero-buttons">
+             <a href="#" class="btn btn-primary">Join Testnet</a>
+         </div>
     </section>
 
          <!-- Stats Section -->
