--- a/index.html
+++ b/index.html
@@ -854,12 +854,118 @@
             justify-content: center;
         }
         
-        .feature-icon svg {
-            width: 100%;
-            height: 100%;
-        }
+                 .feature-icon svg {
+             width: 100%;
+             height: 100%;
+         }
 
-        .feature-card h3 {
+         /* Feature Icon Animations */
+         .feature-icon {
+             animation: floatIcon 6s ease-in-out infinite;
+         }
+
+         .feature-icon svg {
+             filter: drop-shadow(0 0 10px rgba(18, 159, 202, 0.3));
+             transition: filter 0.3s ease;
+         }
+
+         .feature-card:hover .feature-icon svg {
+             filter: drop-shadow(0 0 20px rgba(18, 159, 202, 0.5));
+         }
+
+         .feature-icon svg circle[fill="#129fca"],
+         .feature-icon svg circle[fill="url(#oracleGradient)"],
+         .feature-icon svg circle[fill="url(#blockchainGradient)"],
+         .feature-icon svg circle[fill="url(#economyGradient)"] {
+             animation: iconPulse 3s ease-in-out infinite;
+         }
+
+         .feature-icon svg circle[opacity="0.6"],
+         .feature-icon svg circle[opacity="0.7"],
+         .feature-icon svg circle[opacity="0.8"] {
+             animation: iconPulse 3s ease-in-out infinite 0.5s;
+         }
+
+         .feature-icon svg line {
+             animation: lineFade 2.5s ease-in-out infinite;
+         }
+
+         .feature-icon svg path[stroke="#129fca"],
+         .feature-icon svg path[fill="none"] {
+             animation: pathPulse 4s ease-in-out infinite;
+         }
+
+         .feature-icon svg rect {
+             animation: blockPulse 3.5s ease-in-out infinite;
+         }
+
+         .feature-icon svg text {
+             animation: textPulse 3s ease-in-out infinite;
+         }
+
+         @keyframes floatIcon {
+             0%, 100% {
+                 transform: translateY(0);
+             }
+             50% {
+                 transform: translateY(-5px);
+             }
+         }
+
+         @keyframes iconPulse {
+             0%, 100% {
+                 opacity: 1;
+                 transform: scale(1);
+             }
+             50% {
+                 opacity: 0.85;
+                 transform: scale(1.08);
+             }
+         }
+
+         @keyframes lineFade {
+             0%, 100% {
+                 opacity: 0.4;
+                 stroke-width: 1.5;
+             }
+             50% {
+                 opacity: 0.65;
+                 stroke-width: 2;
+             }
+         }
+
+         @keyframes pathPulse {
+             0%, 100% {
+                 opacity: 1;
+                 stroke-width: 2;
+             }
+             50% {
+                 opacity: 0.75;
+                 stroke-width: 2.5;
+             }
+         }
+
+         @keyframes blockPulse {
+             0%, 100% {
+                 opacity: 0.3;
+                 transform: translateY(0) scale(1);
+             }
+             50% {
+                 opacity: 0.5;
+                 transform: translateY(-2px) scale(1.02);
+             }
+         }
+
+         @keyframes textPulse {
+             0%, 100% {
+                 opacity: 1;
+             }
+             50% {
+                 opacity: 0.8;
+             }
+         }
+
+         .feature-card h3 {
             font-size: 24px;
             font-weight: 600;
             color: #129fca;
